--- a/realtorApp/templates/sidebar.html
+++ b/realtorApp/templates/sidebar.html
@@ -8,10 +8,10 @@
                 </a>
             </li>
             <li>
-                <a id="update" href="{% url 'update' %}">Uppfæra</a>
+                <a href="{% url 'index' %}">Aðalsíða</a>
             </li>
             <li>
-                <a href="#">Shortcuts</a>
+                <a id="update" href="{% url 'update' %}">Uppfæra</a>
             </li>
             <li>
                 <a href="#">Overview</a>
