--- a/realtorApp/templates/base.html
+++ b/realtorApp/templates/base.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="{% static "css/bootstrap.min.css" %}">
     <link rel="stylesheet" type="text/css" href="{% static "css/simple-sidebar.css" %}">
     <link rel="stylesheet" type="text/css" href="{% static "css/1-col-portfolio.css" %}">
+    <link rel="stylesheet" type="text/css" href="{% static "css/style.css" %}">
     <title>FasteignaApp</title>
 </head>
 <body>
@@ -17,7 +18,8 @@
         <div id="mainPage">
             <div id="page-content-wrapper">
                 <div class="container-fluid">
-                    {% include "portfolio.html" %}
+                    {% block content %}
+                    {% endblock %}
                 </div>
             </div>
         </div>
